# Kaggle_temple

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: base.yaml
input/: README.md
notebooks/: README.md
scripts/: kaggle.sh  push_kernel.sh
src/: __init__.py  config.py  data_loader.py  features.py  logging_utils.py  model_factory.py  paths.py  predict.py  train.py
